--- a/DES.ipynb
+++ b/DES.ipynb
@@ -2,24 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from Crypto.Cipher import DES\n",
-    "import base64"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def padding(message):\n",
-    "    while len(message) % 8 != 0:\n",
-    "        message += ' '\n",
-    "    return message"
+    "import pyDes\n",
+    "from pyDes import des\n",
+    "import base64"
    ]
   },
   {
@@ -28,33 +17,26 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def encrypt(message, key):\n",
-    "    des = DES.new(key, DES.MODE_ECB)\n",
-    "    message = padding(message)\n",
-    "    key = padding(key)\n",
-    "    result = des.encrypt(message)\n",
-    "    result = base64.b64encode(result).decode('utf-8')\n",
-    "    return result"
+    "key = b\"DESCRYPT\"\n",
+    "d = des(key, pyDes.ECB)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Please enter the message: hello world\n"
+     ]
+    }
+   ],
    "source": [
-    "def decrypt(cipher, key):\n",
-    "    key = padding(key)\n",
-    "    des = DES.new(key, DES.MODE_ECB)\n",
-    "    cipher = base64.b64decode(cipher)\n",
-    "    cipher = bytes(cipher)\n",
-    "    result = des.decrypt(cipher).decode(\"utf-8\")\n",
-    "    result = result.split()\n",
-    "    res = \"\"\n",
-    "    for i in result:\n",
-    "        res += i + ' '\n",
-    "    res = res[:len(res)-1]\n",
-    "    return res"
+    "message = input(\"Please enter the message: \")\n",
+    "message = bytes(message, 'utf-8')"
    ]
   },
   {
@@ -66,22 +48,36 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Enter the message to be encrypted: hello world\n",
-      "Enter the 8 character key: hello123\n",
-      "CipherText: qKxO1KqGyL8FA3LKGVHyWQ==\n",
-      "Enter the message to be decrypted: qKxO1KqGyL8FA3LKGVHyWQ==\n",
-      "PlainText: hello world\n"
+      "Cipher text: 'jnrzjvoAn3FndLPRynq/Zg=='\n"
      ]
     }
    ],
    "source": [
-    "message = input(\"Enter the message to be encrypted: \")\n",
-    "key = input(\"Enter the 8 character key: \")\n",
-    "cipher = encrypt(message, key)\n",
-    "print(\"CipherText: \" + cipher)\n",
-    "cipher = input(\"Enter the message to be decrypted: \")\n",
-    "plain = decrypt(cipher, key)\n",
-    "print(\"PlainText: \" + plain)"
+    "cipher = d.encrypt(message, pad=' ')\n",
+    "cipher = base64.b64encode(cipher).decode('utf-8')\n",
+    "print(\"Cipher text: %r\"%cipher)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter the cipher text: jnrzjvoAn3FndLPRynq/Zg==\n",
+      "Plain text: 'hello world'\n"
+     ]
+    }
+   ],
+   "source": [
+    "ct = input(\"Enter the cipher text: \")\n",
+    "ct = base64.b64decode(ct)\n",
+    "ct = bytes(ct)\n",
+    "plain = d.decrypt(ct, pad=' ').decode('utf-8')\n",
+    "print(\"Plain text: %r\"%plain)"
    ]
   },
   {
@@ -108,7 +104,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
